--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<app-dashboard></app-dashboard>
+<app-navbar></app-navbar>
+<router-outlet></router-outlet>
+<footer class="footer">
+    <p>&copy; 2025 PayPilot. All rights reserved.</p>
+  </footer>
